--- a/walrus/walrus/static/css/manager_tools.css
+++ b/walrus/walrus/static/css/manager_tools.css
@@ -1,14 +1,14 @@
 .button-container {
   text-align: center;
   margin: auto; /* Center the container */
-  padding: 1rem; /* Space inside the container */
+  padding: 1rem; 
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* Shadow effect */
-  border-radius: 10px; /* Rounded corners */
+  border-radius: 10px; 
   background-color: antiquewhite;
-  max-width: 100rem; /* Maximum width of the container */
+  max-width: 100rem; 
   min-width: 20rem;
-  width: 50%; /* Make it responsive */
-  box-sizing: border-box; /* Include padding and border in the width */
+  width: 50%; 
+  box-sizing: border-box; 
 }
 
 .parent-container {
@@ -16,5 +16,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* This makes the container take the full viewport height */
+  height: 100vh; 
 }
