Added Task Failure
-Boolean field to model
-secondary check if absolutely sure
-note in task list: 'Failure'

--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -28,10 +28,14 @@
                 <td>{{ t.due_date }} </td>
                 <!-- Task Status -->
                 <td>
-                    {% if t.is_complete %}
-                        <p style="background-color:#32cd32;">&nbsp Complete</p>
+                    {% if t.wont_complete %}
+                        <p style="background-color:#FF0000;">&nbsp Failed</p>
                     {% else %}
-                        <p style="background-color:#ffff00;">&nbsp Incomplete &nbsp</p>
+                        {% if t.is_complete %}
+                            <p style="background-color:#32cd32;">&nbsp Complete</p>
+                        {% else %}
+                            <p style="background-color:#ffff00;">&nbsp Incomplete &nbsp</p>
+                        {% endif %}
                     {% endif %}
                 </td>
                 <!-- Assigned Employees -->
