--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -30,6 +30,13 @@
     .buttonGB {
         float: right;
     }
+    .buttonCE {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        margin-top: -60px;
+        margin-left: -100px;
+    }
 </style>
 
 <script language="javascript">
@@ -76,9 +83,10 @@
             <!--not sure if edit_task works yet, writing this anyways-->
             <a href="/manager_tools/edit_task/{{ task.pk }}" class="button buttonED" id="btn1">Edit Task</a>
         {% endif %}
-        
+
         <a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
     </fieldset>
+    <a href="/cannot_complete/{{ task.pk }}" class="button buttonCE">Cannot Complete</a>
 </div>
 </body>
 {% endblock %}
