--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -73,9 +73,24 @@
     <div class="card">
     <div class="card-body">
     <div class="d-flex flex-column align-items-center text-center">
-    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+
+    
+    {% if user.employee.profile_pic %}
+    <img src=" /media/{{ user.employee.profile_pic }} "
+    alt="Admin" class="rounded-circle" width="150">
+    
+    {% else %}
+    <img src="/media/images/profile pic.jpg_large" 
+    alt="Admin" class="rounded-circle" width="150">
+    {% endif %}
+
+
+
+
+    
+    
     <div class="mt-3">
-    <h4>John Doe</h4>
+    <h4>{{user.first_name}} {{user.last_name}}</h4>
     <p class="text-secondary mb-1">Full Stack Developer</p>
     <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
     <button class="btn btn-primary">Follow</button>
@@ -133,7 +148,7 @@
     <hr>
     <div class="row">
     <div class="col-sm-12">
-    <a class="btn btn-info " target="__blank" href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+    <a class="btn btn-info "  href="/home/{{ user.employee.pk }}/profile/edit_profile">Edit</a>
     </div>
     </div>
     </div>
