--- a/walrus/walrus/templates/edit_profile.html
+++ b/walrus/walrus/templates/edit_profile.html
@@ -35,18 +35,25 @@
     <div class="col-lg-4">
     <div class="card">
     <div class="card-body">
+
+
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
     <div class="d-flex flex-column align-items-center text-center">
-    <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+        {% if user.employee.profile_pic %}
+        <img src=" /media/{{ user.employee.profile_pic }} "
+        alt="Admin" class="rounded-circle" width="150">
+        
+        {% else %}
+        <img src="/media/images/profile pic.jpg_large" 
+        alt="Admin" class="rounded-circle" width="150">
+        {% endif %}
     <div class="mt-3">
-    <h4>John Doe</h4>
-    <p class="text-secondary mb-1">Full Stack Developer</p>
-    <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
-    <button class="btn btn-primary">Follow</button>
-    <button class="btn btn-outline-primary">Message</button>
+    <h4>{{user.first_name}} {{user.last_name}}</h4>
+    <button class="btn btn-primary">{{ form.profile_pic }}</button>
     </div>
     </div>
     <hr class="my-4">
-    <form method="POST" >{% csrf_token %}
 
     </div>
     </div>
@@ -83,18 +90,10 @@
     <h6 class="mb-0">Phone</h6>
     </div>
     <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control" value="(239) 816-9029">
+    <input type="text" class="form-control" id=phone_number name=phone_number value="{{user.employee.phone_number}}">
     </div>
     </div>
    
-    <div class="row mb-3">
-    <div class="col-sm-3">
-    <h6 class="mb-0">Address</h6>
-    </div>
-    <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control" value="Bay Area, San Francisco, CA">
-    </div>
-    </div>
     <div class="row">
     <div class="col-sm-3"></div>
     <div class="col-sm-9 text-secondary">
