--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -10,15 +10,9 @@
         margin-top:20px;
         color: #1a202c;
         text-align: left;
-        background-color: #e2e8f0;    
+        background: #f7f7ff;
+        margin-top:20px;
     }
-    .main-body {
-        padding: 15px;
-    }
-    .card {
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
-    }
-    
     .card {
         position: relative;
         display: flex;
@@ -27,37 +21,13 @@
         word-wrap: break-word;
         background-color: #fff;
         background-clip: border-box;
-        border: 0 solid rgba(0,0,0,.125);
+        border: 0 solid transparent;
         border-radius: .25rem;
+        margin-bottom: 1.5rem;
+        box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
     }
-    
-    .card-body {
-        flex: 1 1 auto;
-        min-height: 1px;
-        padding: 1rem;
-    }
-    
-    .gutters-sm {
-        margin-right: -8px;
-        margin-left: -8px;
-    }
-    
-    .gutters-sm>.col, .gutters-sm>[class*=col-] {
-        padding-right: 8px;
-        padding-left: 8px;
-    }
-    .mb-3, .my-3 {
-        margin-bottom: 1rem!important;
-    }
-    
-    .bg-gray-300 {
-        background-color: #e2e8f0;
-    }
-    .h-100 {
-        height: 100%!important;
-    }
-    .shadow-none {
-        box-shadow: none!important;
+    .me-2 {
+        margin-right: .5rem!important;
     }
     
         </style>
@@ -86,15 +56,9 @@
 
 
 
-
-    
-    
     <div class="mt-3">
     <h4>{{user.first_name}} {{user.last_name}}</h4>
-    <p class="text-secondary mb-1">Full Stack Developer</p>
-    <p class="text-muted font-size-sm">Bay Area, San Francisco, CA</p>
-    <button class="btn btn-primary">Follow</button>
-    <button class="btn btn-outline-primary">Message</button>
+  
     </div>
     </div>
     </div>
@@ -136,19 +100,11 @@
     {{user.employee.phone_number}}
     </div>
     </div>
-    <hr>
-    <div class="row">
-    <div class="col-sm-3">
-    <h6 class="mb-0">Address</h6>
-    </div>
-    <div class="col-sm-9 text-secondary">
-    Bay Area, San Francisco, CA
-    </div>
-    </div>
+   
     <hr>
     <div class="row">
     <div class="col-sm-12">
-    <a class="btn btn-info "  href="/home/{{ user.employee.pk }}/profile/edit_profile">Edit</a>
+    <a class ="btn btn-primary px-4"  href="/home/{{ user.employee.pk }}/profile/edit_profile">Edit</a>
     </div>
     </div>
     </div>
