--- a/walrus/walrus/templates/home.html
+++ b/walrus/walrus/templates/home.html
@@ -6,7 +6,7 @@
 {% if user.is_authenticated %}
   Hi {{ user.username }}! A winner is you!
   <p><a href="{% url 'logout' %}">Log Out</a></p>
-  <p><a href="{%url 'password_reset' %}">Reset Password</a></p>
+  <p><a href="{%url 'password_reset' %}">Reset Password is this it</a></p>
 
 {% else %}
   <p>You are not logged in</p>
