added button and redirect for role management on the manager tools page

--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -18,6 +18,7 @@
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/create_role/">Manage Employee Roles and Positions</button>
       </form>
 </body>
 {% endblock %}
