--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -5,11 +5,341 @@
     <div class="container mx-auto">
     </div>
     </body>
-
 {% include 'notification.html' %}
 
 {% block content %}
 {% if user.is_authenticated %}
+
+
+<html lang="en"><head>
+  <meta charset="utf-8">
+  
+  
+  <title>profile projects - Bootdey.com</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style type="text/css">
+        body{margin-top:20px;
+  background:#f7f8fa
+  }
+  
+  .avatar-xxl {
+      height: 7rem;
+      width: 7rem;
+  }
+  
+  .card {
+      margin-bottom: 20px;
+      -webkit-box-shadow: 0 2px 3px #eaedf2;
+      box-shadow: 0 2px 3px #eaedf2;
+  }
+  
+  .pb-0 {
+      padding-bottom: 0!important;
+  }
+  
+  .font-size-16 {
+      font-size: 16px!important;
+  }
+  .avatar-title {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      background-color: #038edc;
+      color: #fff;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      font-weight: 500;
+      height: 100%;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      width: 100%;
+  }
+  
+  .bg-soft-primary {
+      background-color: rgba(3,142,220,.15)!important;
+  }
+  .rounded-circle {
+      border-radius: 50%!important;
+  }
+  
+  .nav-tabs-custom .nav-item .nav-link.active {
+      color: #038edc;
+  }
+  .nav-tabs-custom .nav-item .nav-link {
+      border: none;
+  }
+  .nav-tabs-custom .nav-item .nav-link.active {
+      color: #038edc;
+  }
+  
+  .avatar-group {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      padding-left: 12px;
+  }
+  
+  .border-end {
+      border-right: 1px solid #eff0f2 !important;
+  }
+  
+  .d-inline-block {
+      display: inline-block!important;
+  }
+  
+  .badge-soft-danger {
+      color: #f34e4e;
+      background-color: rgba(243,78,78,.1);
+  }
+  
+  .badge-soft-warning {
+      color: #f7cc53;
+      background-color: rgba(247,204,83,.1);
+  }
+  
+  .badge-soft-success {
+      color: #51d28c;
+      background-color: rgba(81,210,140,.1);
+  }
+  
+  .avatar-group .avatar-group-item {
+      margin-left: -14px;
+      border: 2px solid #fff;
+      border-radius: 50%;
+      -webkit-transition: all .2s;
+      transition: all .2s;
+  }
+  
+  .avatar-sm {
+      height: 2rem;
+      width: 2rem;
+  }
+  
+  .nav-tabs-custom .nav-item {
+      position: relative;
+      color: #343a40;
+  }
+  
+  .nav-tabs-custom .nav-item .nav-link.active:after {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+  }
+  
+  .nav-tabs-custom .nav-item .nav-link::after {
+      content: "";
+      background: #038edc;
+      height: 2px;
+      position: absolute;
+      width: 100%;
+      left: 0;
+      bottom: -2px;
+      -webkit-transition: all 250ms ease 0s;
+      transition: all 250ms ease 0s;
+      -webkit-transform: scale(0);
+      transform: scale(0);
+  }
+  
+  .badge-soft-secondary {
+      color: #74788d;
+      background-color: rgba(116,120,141,.1);
+  }
+  
+  .badge-soft-secondary {
+      color: #74788d;
+  }
+  
+  .work-activity {
+      position: relative;
+      color: #74788d;
+      padding-left: 5.5rem
+  }
+  
+  .work-activity::before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      top: 0;
+      left: 66px;
+      border-left: 1px solid rgba(3,142,220,.25)
+  }
+  
+  .work-activity .work-item {
+      position: relative;
+      border-bottom: 2px dashed #eff0f2;
+      margin-bottom: 14px
+  }
+  
+  .work-activity .work-item:last-of-type {
+      padding-bottom: 0;
+      margin-bottom: 0;
+      border: none
+  }
+  
+  .work-activity .work-item::after,.work-activity .work-item::before {
+      position: absolute;
+      display: block
+  }
+  
+  .work-activity .work-item::before {
+      content: attr(data-date);
+      left: -157px;
+      top: -3px;
+      text-align: right;
+      font-weight: 500;
+      color: #74788d;
+      font-size: 12px;
+      min-width: 120px
+  }
+  
+  .work-activity .work-item::after {
+      content: "";
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      left: -26px;
+      top: 3px;
+      background-color: #fff;
+      border: 2px solid #038edc
+  }
+  
+  
+      </style>
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-8">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+ 
+  <div class="col-md-9">
+  <div class="ms-3">
+  
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+  </div>
+  </div>
+  
+  
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <div class="card">
+  <div class="tab-content p-4">
+  <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+  <div class="d-flex align-items-center">
+  <div class="flex-1">
+  <h4 class="card-title mb-4">My Tasks</h4>
+  </div>
+  </div>
+
+
+
+
+  <div class="row" id="all-projects">
+    {% for x in tasks %}
+
+  <div class="col-md-6" id="project-items-1">
+  <div class="card">
+  <div class="card-body">
+  <div class="d-flex mb-3">
+  <div class="flex-grow-1 align-items-start">
+  <div>
+  <h6 class="mb-0 text-muted">
+  <h5 class="mb-1 font-size-17 team-title">Marketing</h5>
+  <span class="team-date">{{test.due_date}}</span>
+  </h6>
+  </div>
+  </div>
+  <div class="dropdown ms-2">
+ 
+  <div class="dropdown-menu dropdown-menu-end">
+  <a class="dropdown-item" href="javascript: void(0);" data-bs-toggle="modal" data-bs-target=".bs-example-new-project" onclick="editProjects('project-items-1')">Edit</a>
+  <a class="dropdown-item" href="javascript: void(0);">Share</a>
+  <div class="dropdown-divider"></div>
+  <a class="dropdown-item delete-item" onclick="deleteProjects('project-items-1')" data-id="project-items-1" href="javascript: void(0);">Delete</a>
+  </div>
+  </div>
+  </div>
+  <div class="mb-4">
+  
+  <p class="text-muted mb-0 team-description">Every Marketing Plan
+  Needs</p>
+  </div>
+  <div class="d-flex">
+ 
+ 
+  
+  <div class="align-self-end">
+  <span class="badge badge-soft-danger p-2 team-status">Pending</span>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+
+
+  {% endfor %} 
+
+
+
+  
+  
+  
+  </div>
+ 
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+ 
+  </ul>
+  
+  </div>
+ 
+  </div>
+  </div>
+  </div>
+  </div>
+  
+  </div>
+  </div>
+
+
+  </ul>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript">
+    
+  </script>
+  
+  </body></html>
+
+
+
+
+
 
 <h3> Home Page   </h3>
 
