--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -16,6 +16,9 @@
   
   
   <title>profile projects - Bootdey.com</title>
+
+  
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style type="text/css">
@@ -23,16 +26,19 @@
   background:#f7f8fa
   }
   
-  .avatar-xxl {
-      height: 7rem;
-      width: 7rem;
-  }
+
   
   .card {
       margin-bottom: 20px;
       -webkit-box-shadow: 0 2px 3px #eaedf2;
       box-shadow: 0 2px 3px #eaedf2;
   }
+
+  .clock_in { 
+  position: absolute; 
+  top: 10px; 
+  right: 10px; 
+} 
   
   .pb-0 {
       padding-bottom: 0!important;
@@ -41,22 +47,7 @@
   .font-size-16 {
       font-size: 16px!important;
   }
-  .avatar-title {
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      background-color: #038edc;
-      color: #fff;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      font-weight: 500;
-      height: 100%;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      width: 100%;
-  }
+  
   
   .bg-soft-primary {
       background-color: rgba(3,142,220,.15)!important;
@@ -75,14 +66,7 @@
       color: #038edc;
   }
   
-  .avatar-group {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-      padding-left: 12px;
-  }
+
   
   .border-end {
       border-right: 1px solid #eff0f2 !important;
@@ -107,18 +91,9 @@
       background-color: rgba(81,210,140,.1);
   }
   
-  .avatar-group .avatar-group-item {
-      margin-left: -14px;
-      border: 2px solid #fff;
-      border-radius: 50%;
-      -webkit-transition: all .2s;
-      transition: all .2s;
-  }
+
   
-  .avatar-sm {
-      height: 2rem;
-      width: 2rem;
-  }
+  
   
   .nav-tabs-custom .nav-item {
       position: relative;
@@ -214,7 +189,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <div class="container">
   <div class="row">
-  <div class="col-xl-8">
+  <div class="col-xl-9">
   <div class="card-body pb-0">
   <div class="row align-items-center">
  
@@ -255,8 +230,11 @@
   <div class="flex-grow-1 align-items-start">
   <div>
   <h6 class="mb-0 text-muted">
-  <h5 class="mb-1 font-size-17 team-title">Marketing</h5>
-  <span class="team-date">{{test.due_date}}</span>
+  <h5 class="mb-1 font-size-17 team-title">{{x.task_name}}  
+  <button class ="btn btn-primary px-4 clock_in" type="submit" name="{{x}} clock"> Clock-in </button>
+
+  </h5>
+  <span class="team-date">Due: {{x.due_date}}</span>
   </h6>
   </div>
   </div>
@@ -272,8 +250,10 @@
   </div>
   <div class="mb-4">
   
-  <p class="text-muted mb-0 team-description">Every Marketing Plan
-  Needs</p>
+    <a href = "/task_detail/{{ x.pk }}">Description </a>
+    <br>
+    <a href= {% url 'update_task_status' task_id=x.pk %}>Update </a> 
+
   </div>
   <div class="d-flex">
  
