--- a/walrus/walrus/templates/edit_profile.html
+++ b/walrus/walrus/templates/edit_profile.html
@@ -1,3 +1,6 @@
+
+{% load static %}
+
 <html lang="en"><head>
     <meta charset="utf-8">
     
@@ -5,27 +8,9 @@
     <title>profile edit data and skills - Bootdey.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/css/profile.css' %}">
     <style type="text/css">
-            body{
-        background: #f7f7ff;
-        margin-top:20px;
-    }
-    .card {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        min-width: 0;
-        word-wrap: break-word;
-        background-color: #fff;
-        background-clip: border-box;
-        border: 0 solid transparent;
-        border-radius: .25rem;
-        margin-bottom: 1.5rem;
-        box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
-    }
-    .me-2 {
-        margin-right: .5rem!important;
-    }
+          
         </style>
     </head>
     <body style="">
