fixed an error in home_page.html

--- a/walrus/walrus/static/css/profile.css
+++ b/walrus/walrus/static/css/profile.css
@@ -1,14 +1,11 @@
-body{
-    background: #f7f7ff;
-    margin-top:20px;
-}
+
 .card {
     position: relative;
     display: flex;
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background:#ffffff !important;
     background-clip: border-box;
     border: 0 solid transparent;
     border-radius: .25rem;
@@ -17,4 +14,8 @@ body{
 }
 .me-2 {
     margin-right: .5rem!important;
+}
+body{
+    background:#ffffff !important;
+    margin-top:20px;
 }
