--- a/walrus/walrus/templates/update_task_status.html
+++ b/walrus/walrus/templates/update_task_status.html
@@ -31,7 +31,9 @@
   </div>
   </div>
   </div>
-  <form>
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+
   <h3>Task Status Update</h3>
   <div class="card">
     <div class="tab-content p-4">
@@ -67,7 +69,7 @@
   </div>
   </div>
   </div>
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript"> 
   </script>
@@ -75,10 +77,3 @@
   </body></html>
 </body>
 </html>
-<form method="POST" enctype="multipart/form-data">
-{% csrf_token %}
-    {{ form.as_p }}
-
-
-<input type="Submit"  value="submit Update" >
-</form>
