fixed text box on update page.

--- a/walrus/walrus/templates/update_task_status.html
+++ b/walrus/walrus/templates/update_task_status.html
@@ -40,8 +40,7 @@
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
     <div class="d-flex align-items-center">
     <div class="flex-1">
-     
-      <input type="text" class="form-control update_textbox" , ="" id="description" name="description" value="">
+      <textarea type="text" class="form-control update_textbox" id="description" name="description" value=""></textarea>
     <h6 class="mb-0 text-muted">
     
     <div></div>
