--- a/walrus/walrus/static/css/task_update.css
+++ b/walrus/walrus/static/css/task_update.css
@@ -1,11 +1,12 @@
 .update_textbox{
     width: 500px !important; 
         height: 200px;
+        text-align:left;
+
 }
 
 .submit_task_update { 
     position: absolute; 
     bottom: 10px; 
     right: 10px; 
-   
   } 
