--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -1,43 +1,119 @@
 {% block content %}
 
-<style>
-    .center {
-        text-align: center;
-    }
+<html>
 
-    fieldset {
-        border: 2px solid rgb(0, 0, 0);
-        width: 400px;
-        margin:auto;
-    }
 
-    .button {
-        font: 16px Arial;
-        text-decoration: none;
-        background-color: #EEEEEE;
-        color: #333333;
-        padding: 6px 12px 6px 12px;
-        border-top: 1px solid #CCCCCC;
-        border-right: 1px solid #333333;
-        border-bottom: 1px solid #333333;
-        border-left: 1px solid #CCCCCC;
-    }
 
-    .buttonED {
-        float: left;
-    }
+{% load static %}
+<html lang="en"><head>
+  <meta charset="utf-8">
 
-    .buttonGB {
-        float: right;
-    }
-    .buttonCE {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        margin-top: -60px;
-        margin-left: -100px;
-    }
-</style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{% static '/css/task_description.css' %}">
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+  <div class="col-md-9">
+  <div class="ms-3">
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+  <h3>{{task.task_name}}</h3>
+  <div class="card">
+    <div class="tab-content p-4">
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        <h4>Description</h4>
+        <div class="card description_card">
+            <div class="tab-content p-4">
+            <div class="tab-pane active show" id="description-tab" role="tabpanel">
+            <div class="d-flex align-items-center">
+            <div class="flex-1">
+    <h6 class="mb-0 text-muted">
+        <h6>{{task.task_description}}</h6>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <h4>Task Info</h4>
+        <div class="card description_card">
+            <div class="tab-content p-4">
+            <div class="tab-pane active show" id="description-tab" role="tabpanel">
+            <div class="d-flex align-items-center">
+            <div class="flex-1">
+    <h6 class="mb-0 text-muted">
+        <h6>Project Name: {{ task.project }}</h6>
+        <br>
+        <h6>Assigned To: 
+            {% for e in employees %}
+            {{e}}
+            {% endfor %}
+        </h6>
+
+    </div>
+</div>
+</div>
+</div>
+</div>
+<legend><b>Updates:</b></legend>
+{% for update in updates %}
+    <a>{{ update.description }}</a> <br>
+    {%if update.venue_image %}
+        <img src="{{ update.venue_image.url }}" width="500" 
+        height="500" >
+        <br>
+        <br>
+    {% endif %}
+    <br>
+   
+{% endfor %}
+
+    </div>
+    </div>
+    
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript"> 
+  </script>
+  </form>
+  </body></html>
+</body>
+</html>
 
 <script language="javascript">
     function hideEdit() {
