--- a/walrus/walrus/static/css/task_description.css
+++ b/walrus/walrus/static/css/task_description.css
@@ -4,4 +4,10 @@
     text-align:left;
     position: relative 
 }
+
+.back_button {
+    position: absolute; 
+    top: 10px; 
+    right: 500px; 
+  }
   
