--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -20,6 +20,7 @@ Todays shift : {{shift.start}} -  {{shift.end}}
 <br><br>
 <a href="{%url 'calendar' %}">Calendar </a>
 <br>
+<a href="/shift_switch/{{ employee.pk }}">Shift Switch</a>
 <a href="{% url 'manager_tools' %}">Manager Tools</a>
 <a  href= "/home/{{ employee.pk }}/availability" > Avilability </a>
 <br>
