--- a/walrus/walrus/templates/base.html
+++ b/walrus/walrus/templates/base.html
@@ -1,13 +1,18 @@
+
+
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Basic Login System Test{% endblock %}</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 </head>
-<body>
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-</body>
+
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+  <div class="container mx-auto">
+      {% block content %}
+      {% endblock %}
+  </div>
+  </body>
 </html>
