changed create project and changed button names.

--- a/walrus/walrus/templates/edit_task.html
+++ b/walrus/walrus/templates/edit_task.html
@@ -47,7 +47,7 @@
         {% csrf_token %}
         {{ form.as_p }}
     
-        <input type="Submit"  class = "btn btn-primary px-4" value="submit Update" >
+        <input type="Submit"  class = "btn btn-primary px-4" value="Complete Edit" >
      
     </form>
     </div>
