--- a/walrus/walrus/templates/add_task.html
+++ b/walrus/walrus/templates/add_task.html
@@ -48,7 +48,7 @@
         {% csrf_token %}
         {{ form.as_p }}
     
-        <input type="Submit"  class = "btn btn-primary px-4" value="submit Update" >
+        <input type="Submit"  class = "btn btn-primary px-4" value="Create Task" >
      
     </form>
     </div>
