--- a/walrus/walrus/templates/create_project.html
+++ b/walrus/walrus/templates/create_project.html
@@ -1,5 +1,109 @@
-<form method="POST">
+
+<html>
+
+{% load static %}
+<html lang="en"><head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{% static '/css/edit_task.css' %}">
+
+
+  <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button> Submit </button>
-</form>
+  
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+  <div class="col-md-9">
+  <div class="ms-3">
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <h4>Create Project</h4>
+
+  <div class="card">
+    <div class="tab-content p-4">
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        
+      <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+    
+        <input type="Submit"  class = "btn btn-primary px-4" value="Create Project" >
+     
+    </form>
+    </div>
+    </div>
+    </div>
+    </div>
+
+  </form>
+
+  
+
+    </div>
+</div>
+</div>
+</div>
+</div>
+
+
+    </div>
+    </div>
+    
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+  </ul>
+  </div>
+  </div>
+  
+  </div>
+  </div>
+  </div>
+  </div>
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript"> 
+  </script>
+  </form>
+  </body></html>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
