--- a/walrus/walrus/templates/add_task.html
+++ b/walrus/walrus/templates/add_task.html
@@ -12,7 +12,7 @@
   </head>
   <body style="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="{% static '/css/edit_task.css' %}">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
 
 
   <form method="POST">
