--- a/walrus/walrus/templates/create_project.html
+++ b/walrus/walrus/templates/create_project.html
@@ -12,7 +12,7 @@
   </head>
   <body style="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="{% static '/css/edit_task.css' %}">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
 
 
   <form method="POST">
@@ -28,7 +28,6 @@
   <div class="row my-4">
   <div class="col-md-12">
   <div>
-    <a href="{% url 'home' %}" class="back_button">Go Back</a>
   </div>
   </div>
   </div>
@@ -37,6 +36,7 @@
   </div>
   </div>
   <h4>Create Project</h4>
+  <a href="{% url 'home' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
