--- a/walrus/walrus/static/css/task_description.css
+++ b/walrus/walrus/static/css/task_description.css
@@ -5,9 +5,8 @@
     position: relative 
 }
 
-.back_button {
+.go_back{
     position: absolute; 
-    top: 10px; 
-    right: 500px; 
-  }
-  
+    top: 40px; 
+    left: 700px;
+}
