--- a/walrus/walrus/templates/edit_task.html
+++ b/walrus/walrus/templates/edit_task.html
@@ -12,7 +12,7 @@
   </head>
   <body style="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="{% static '/css/forms.css' %}">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
 
 
   <form method="POST">
@@ -36,7 +36,8 @@
   </div>
   </div>
   </div>
-  <h4>Edit Task</h4>
+  <h4>Add Task</h4>
+
   <div class="card">
     <div class="tab-content p-4">
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
@@ -94,6 +95,8 @@
   </body></html>
 </body>
 </html>
+
+
 
 
 
