--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -25,17 +25,15 @@
   <div class="row my-4">
   <div class="col-md-12">
   <div>
-    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+    <div>
+    </div>
+  </div>
 
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
+</div>
 
   <h3>{{task.task_name}}</h3>
+  <a href="{% url 'home' %}" class="go_back">Go Back</a>
+
   <div class="card">
     <div class="tab-content p-4">
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
