--- a/walrus/walrus/templates/edit_task.html
+++ b/walrus/walrus/templates/edit_task.html
@@ -36,7 +36,7 @@
   </div>
   </div>
   </div>
-  <h4>Add Task</h4>
+  <h4>Edit Task</h4>
 
   <div class="card">
     <div class="tab-content p-4">
