--- a/walrus/walrus/static/css/manager_tools.css
+++ b/walrus/walrus/static/css/manager_tools.css
@@ -12,7 +12,7 @@
 }
 
 .parent-container {
-  background-color:lightseagreen ;
+  background-color:rgb(230, 236, 236) ;
   display: flex;
   justify-content: center;
   align-items: center;
