temorary change to employee stats.

--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -107,7 +107,7 @@
                 <td>{{ t.date_assigned_to }} </td>
                 <td>{{ t.due_date }} </td>
                 <!-- Task Status -->
-                <td> {{ t.time_on_task }}</td>
+                <td> None</td>
                 <!-- Assigned Employees -->
                
             </tr>
