added back button and fixed bug with can't be completed tasks still apearing.

--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -17,7 +17,7 @@
     <div class="main-body">
     
     
-    
+        &nbsp&nbsp&nbsp&nbsp<a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
     <div class="row gutters-sm">
     <div class="col-md-4 mb-3">
     <div class="card">
