--- a/walrus/walrus/templates/edit_profile.html
+++ b/walrus/walrus/templates/edit_profile.html
@@ -16,6 +16,8 @@
     <body style="">
     <div class="container">
     <div class="main-body">
+        &nbsp&nbsp&nbsp&nbsp<a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
+
     <div class="row">
     <div class="col-lg-4">
     <div class="card">
