--- a/walrus/walrus/templates/profile.html
+++ b/walrus/walrus/templates/profile.html
@@ -1,4 +1,3 @@
-<h3>Hello</h3>
 {% if user.employee.profile_pic %}
 <img src=" /media/{{ user.employee.profile_pic }} "
 width="500" 
@@ -22,6 +21,7 @@ height="200" >
     <input type="Submit"  value="remove picture" name="remove" >
 </form>
 
+&nbsp&nbsp&nbsp&nbsp<a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
 
 <br>
 {{ user.first_name }} {{ user.last_name}}
