--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -15,6 +15,8 @@
     {%for request in requests_off%}
 
     {{request.start}} to {{request.end}}
+    {{request.description}}
+
     <br>
     {% endfor %}
 
