--- a/walrus/walrus/templates/create_role.html
+++ b/walrus/walrus/templates/create_role.html
@@ -1,7 +1,7 @@
 {% block content %}
 
 <head>
-    <title>Create Role</title>
+    <title>Roles/Groups Management</title>
 </head>
 <body>
     <form action="" method="post">
