--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -43,8 +43,10 @@
       <br>
       <a href="{%url 'calendar' %}">Calendar </a>
       <br>
+      {%if user.employee.is_manager == 'Yes' %}
       <a href="{% url 'manager_tools' %}">Manager Tools</a>
       <br>
+      {%endif%}
       <a  href= "/home/{{ employee.pk }}/availability" > Avilability </a>
       <br>
       <a  href= "/home/{{ employee.pk }}/request_time_off" > Request Time off </a>
