I spelled access wrong.

--- a/walrus/walrus/templates/notAManager.html
+++ b/walrus/walrus/templates/notAManager.html
@@ -35,7 +35,7 @@
             <div class="tab-pane active show" id="description-tab" role="tabpanel">
             <div class="d-flex align-items-center">
             <div class="flex-1">
-        <h4>You do not have acess to this page</h4>
+        <h4>You do not have access to this page</h4>
         <br>
         <a href="{% url 'home' %}">Go To Home Page</a>
     </div>
