removes shift from prev employee
i dont wanna say this solution was easy cause i feel like that implies its a good solution. this is one of the most jank things ive ever written and i dont know if thats just a facet of django or im a fool, a silly clown

--- a/walrus/walrus/templates/shift_switch.html
+++ b/walrus/walrus/templates/shift_switch.html
@@ -23,11 +23,12 @@
         border-left: 1px solid #CCCCCC;
     }
 
-    .buttonGB {float: right;}
+    .buttonGB {text-align: center;}
 </style>
 
 <body>
     <div id="form">
+        <a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
         <h3>Shifts Available:</h3>
         {% for s in shifts %}
             <fieldset>
@@ -37,7 +38,6 @@
                 <b>Assigned Employee {{ s.user.first_name }}</b>
                 <br><br>
                 <a href="/swap_shift/{{ employee.pk }}/{{ s.pk }}" class="button">Pick Up Shift</a>
-                <a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
             </fieldset>
         {% endfor %}
     </div>
