--- a/walrus/walrus/templates/manage_roles.html
+++ b/walrus/walrus/templates/manage_roles.html
@@ -12,7 +12,7 @@
            <p> {{ msg }}</p>
         {% endif %}
    
-        <button type="submit" name="submit_role" value="Submit">SUBMIT</button>
+        <button type="submit" name="submit_role" value="submit">SUBMIT</button>
     
     </form>
 
