fixed bug on employee stats showing wrong status.

--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -98,7 +98,7 @@
                 </td>
                 <!-- Project Name -->
                 <td>
-                  {% if task.is_complete %}
+                  {% if t.is_complete %}
                       Complete
                   {% else %}
                       Incomplete
